# gitential-backend

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pylintrc  Dockerfile  Dockerfile.testing  README.md  anonimize.sh  credential_fix.csv  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  settings.yml  tasks.py
email_templates/: export_workspace.yml  first_steps.yml  free_trial_ended.yml  free_trial_expiration.yml  getting_started_best_coding_practices.yml  getting_started_explore_more_as_a_professional.yml  getting_started_first_steps.yml  getting_started_level_up_your_developers.yml  getting_started_metrics.yml  getting_started_use_case_library.yml  invite_member.yml  request_free_trial.yml  welcome.yml
gitential2/: __main__.py  cli.py  datatypes.py  exceptions.py  kvstore.py  legacy_import.py  license.py  logging.py  secrets.py  settings.py
gitential2/backends/: __init__.py  common.py  in_memory.py  sql.py
gitential2/backends/base/: __init__.py  backend.py  mixins.py  repositories.py  repositories_base.py  repositories_its.py
gitential2/backends/sql/: __init__.py  _cleanup2.py  cleanup.py  migrations.py  repositories.py  repositories_its.py  reset_workspace.py  tables.py
gitential2/celery/: main.py
gitential2/cli_v2/: __init__.py  authors.py  auto_export.py  cache.py  common.py  crud.py  deploys.py  duplicate_workspace.py  emails.py  export.py  its.py  jira.py  refresh.py  repositories.py  status.py  usage_stats.py  users.py  vsts.py  workspaces.py
gitential2/core/: __init__.py  abc.py  access_log.py  admin.py  api_keys.py  authors.py  authors_list.py  base.py  calculations.py  commits.py  commits_and_prs.py  context.py  credentials.py  dashboards.py  data_queries.py  deduplication.py  deploys.py  emails.py  export.py  extended_email_service.py  its.py  legacy.py  maintenance.py  parsers.py  pats.py  permissions.py  projects.py  refresh.py  refresh_statuses.py  refresh_v2.py  repositories.py  repositories_new.py  repositories_paginated.py  reseller_codes.py  search.py  stats.py  stats_v2.py  statuses.py  subscription.py  subscription_payment.py  (+8 more)
gitential2/datatypes/: __init__.py  access_approvals.py  api_keys.py  authors.py  auto_export.py  calculated.py  charts.py  cli_v2.py  common.py  credentials.py  dashboards.py  data_queries.py  deploys.py  email_log.py  export.py  extraction.py  its.py  its_projects.py  its_projects_cache.py  middlewares.py  pats.py  permissions.py  project_repositories.py  projects.py  pull_requests.py  refresh.py  refresh_statuses.py  repositories.py  reseller_codes.py  stats.py  subscriptions.py  teammembers.py  teams.py  user_its_projects_cache.py  user_repositories_cache.py  user_repositories_cache_last_refresh.py  users.py  workspacemember.py  workspacepermissions.py  workspaces.py
gitential2/export/: exporters.py
gitential2/extraction/: langdetection.py  output.py  repository.py
gitential2/integrations/: __init__.py  base.py  bitbucket.py  common.py  github.py  gitlab.py  jira.py  linkedin.py  vsts.py
gitential2/integrations/jira/: __init__.py  common.py  transformations.py
gitential2/integrations/vsts/: __init__.py  common.py  transformations.py
gitential2/legacy_import/: __init__.py  projects_and_repos.py  secrets.py  teams_and_authors.py  users.py  workspaces.py
gitential2/public_api/: application.py  dependencies.py  main.py
gitential2/public_api/routers/: admin.py  auth.py  authors.py  commits.py  commits_and_prs.py  configuration.py  dashboards.py  deploys.py  invitations.py  its.py  legacy.py  payment.py  ping.py  projects.py  repositories.py  stats.py  teams.py  testing.py  users.py  workspaces.py
gitential2/utils/: __init__.py  executors.py  ignorespec.py  logging.py  ssh.py  tempdir.py  timer.py
nginx/: Dockerfile  nginx-selfsigned.crt  nginx-selfsigned.key  nginx.conf
scripts/: gather_internal_deployment_history.py  generate_usage_stats_csvs.py
tests/: conftest.py  test_gitential2.py  test_secrets.py  test_utils_tempdir.py
tests/extraction/: test_repository.py
tests/integration/: conftest.py
tests/integration/core/: test_context.py
tests/integration/sample_queries/: 01_select_created_between.json  02_aggregate_by_created_at_month.json  03_aggregate_by_created_at_month_details.json  04_avg_lead_time.json  05_replace_project_id_to_itsp_id.json  06_replace_project_id_to_repo_id.json  07_list_commits.json
tests/public_api/: test_ping.py
tests/unit/: conftest.py  secrets.json  test_backends.py  test_gitential2.py  test_is_bugfix.py  test_secrets.py  test_settings.py  test_utils.py  test_utils_ignorespec.py  test_utils_tempdir.py
tests/unit/core/: conftest.py  test_authors.py  test_handle_auth.py
tests/unit/extraction/: conftest.py  test_langdetection.py  test_repository.py
tests/unit/public_api/: test_ping.py
