[tool.poetry]
name = "gitential2"
version = "0.1.0"
description = ""
authors = ["László Andrási <mail@laszloandrasi.com>"]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.4.1"
pydantic = "^1.7.2"
pygit2 = "^1.4.0"
numpy = "^1.19.4"
cryptography = "^3.2.1"
click = "^7.1.2"
tqdm = "^4.53.0"
structlog = "^20.1.0"
fastapi = "^0.62.0"
uvicorn = "^0.12.3"
requests = "^2.25.0"
websockets = "^8.1"
sqlalchemy = "^1.3.22"
psycopg2 = "^2.8.6"
alembic = "^1.4.3"
sqlalchemy-utils = "^0.36.8"
pathspec = "^0.8.1"
pyyaml = "^5.3.1"
authlib = "^0.15.3"
httpx = "^0.16.1"
itsdangerous = "^1.1.0"
loginpass = "^0.5"
mypy = "^0.800"
celery = "^5.0.5"
redis = "^3.5.3"
ibis-framework = "^1.4.0"
rsa = "^4.7.2"
billiard = "^3.6.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^20.8b1", allow-prereleases = true}
pylint = "^2.6.0"
mypy = "^0.800"
sqlalchemy-stubs = "^0.4"

[tool.black]
line-length = 120
target-version = ['py38']

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

