[tool.poetry]
name = "gitential2"
version = "0.1.0"
description = ""
authors = ["László Andrási <mail@laszloandrasi.com>"]

[tool.poetry.scripts]
g2 = "gitential2.cli_v2:main"

[tool.poetry.dependencies]
python = "~3.10"
invoke = "^1.4.1"
pydantic = "^1.10.2"
pygit2 = "^1.10.1"
numpy = "^1.19.4"
cryptography = "^38.0.1"
click = "^8.0.0"
tqdm = "^4.53.0"
structlog = "^20.1.0"
fastapi = "^0.78.0"
uvicorn = "^0.15.0"
requests = "^2.25.0"
websockets = "^10.1"
sqlalchemy = "^1.3.22"
psycopg2 = "^2.8.6"
alembic = "^1.4.3"
sqlalchemy-utils = "^0.37.9"
pathspec = "^0.9.0"
pyyaml = "^5.3.1"
authlib = "^0.15.5"
httpx = "^0.21.1"
itsdangerous = "^1.1.0"
loginpass = "^0.5"
celery = "^5.2.2"
redis = "^3.5.3"
ibis-framework = "^2.1.1"
rsa = "^4.7.2"
billiard = "^3.6.3"
jinja2 = "^3.0.3"
typer = "^0.4.0"
tabulate = "^0.8.9"
azure-devops = {version = "^6.0.0-beta.4", allow-prereleases = true}
orjson = "^3.5.3"
Unidecode = "^1.2.0"
stripe = "^2.58.0"
email-validator = "^1.1.3"
XlsxWriter = "^3.0.2"
boto3 = "^1.20.43"
oauthlib = "^3.2.1"
wheel = "^0.38.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^22.1.0"
pylint = "^2.6.0"
mypy = "^0.931"
sqlalchemy-stubs = "^0.4"
flower = {git = "https://github.com/avikam/flower.git"}
jupyter = "^1.0.0"
notebook = "^6.3.0"
Pympler = "^0.9"
types-PyYAML = "^6.0.4"
types-redis = "^4.1.16"
types-requests = "^2.27.10"
types-tabulate = "^0.8.5"
types-Jinja2 = "^2.11.9"
pandas-stubs = "^1.2.0"
types-itsdangerous = "^1.1.6"
safety = "^2.3.1"

[tool.black]
line-length = 120
target-version = ['py38']

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

