[tool.poetry]
name = "gitential2"
version = "0.1.0"
description = ""
authors = ["László Andrási <mail@laszloandrasi.com>"]

[tool.poetry.scripts]
g2 = "gitential2.cli_v2:main"

[tool.poetry.dependencies]
python = "~3.10"
invoke = "^1.4.1"
pydantic = "^1.10.2"
pygit2 = "^1.10.1"  # 'pygit2' version 1.10.1 is outdated (latest: 1.11.0)
numpy = "^1.19.4" # 'numpy' version 1.22.4 is outdated (latest: 1.23.4)
cryptography = "^38.0.1"
click = "^8.0.0"
tqdm = "^4.53.0"
structlog = "^20.1.0"
fastapi = "^0.78.0" # 'fastapi' version 0.78.0 is outdated (latest: 0.86.0)
uvicorn = "^0.15.0" # 'uvicorn' version 0.15.0 is outdated (latest: 0.19.0)
requests = "^2.25.0" # 'requests' version 2.27.1 is outdated (latest: 2.28.1)
websockets = "^10.1"
sqlalchemy = "^1.3.22"
psycopg2 = "^2.8.6"
alembic = "^1.4.3" # 'alembic' version 1.7.7 is outdated (latest: 1.8.1)
sqlalchemy-utils = "^0.37.9"
pathspec = "^0.9.0"
pyyaml = "^5.3.1" # 'pyyaml' version 5.4.1 is outdated (latest: 6.0)
authlib = "^0.15.5" # 'authlib' version 0.15.5 is outdated (latest: 1.1.0)
httpx = "^0.21.1"
itsdangerous = "^1.1.0" # 'itsdangerous' version 1.1.0 is outdated (latest: 2.1.2)
loginpass = "^0.5"
celery = "^5.2.2"
redis = "^3.5.3" # 'redis' version 3.5.3 is outdated (latest: 4.3.4)
ibis-framework = "^2.1.1" # ibis-framework' version 2.1.1 is outdated (latest: 3.2.0)
rsa = "^4.7.2"
billiard = "^3.6.3" # 'billiard' version 3.6.4.0 is outdated (latest: 4.0.2)
jinja2 = "^3.0.3"
typer = "^0.4.0" # 'typer' version 0.4.1 is outdated (latest: 0.7.0)
tabulate = "^0.8.9" # 'tabulate' version 0.8.9 is outdated (latest: 0.9.0)
azure-devops = {version = "^6.0.0-beta.4", allow-prereleases = true}
orjson = "^3.5.3" # 'orjson' version 3.6.8 is outdated (latest: 3.8.1)
Unidecode = "^1.2.0"
stripe = "^2.58.0" # 'stripe' version 2.76.0 is outdated (latest: 4.2.0)
email-validator = "^1.1.3" # 'email-validator' version 1.2.1 is outdated (latest: 1.3.0)
XlsxWriter = "^3.0.2"
boto3 = "^1.20.43" # 'boto3' version 1.23.10 is outdated (latest: 1.26.4)
oauthlib = "^3.2.1"
wheel = "^0.38.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5" # 'pytest' version 6.2.5 is outdated (latest: 7.2.0)
black = "^22.10.0"
pylint = "^2.6.0" # 'pylint' version 2.13.9 is outdated (latest: 2.15.5)
mypy = "^0.931" # 'mypy' version 0.931 is outdated (latest: 0.990)
sqlalchemy-stubs = "^0.4"
flower = {git = "https://github.com/avikam/flower.git"}
jupyter = "^1.0.0"
notebook = "^6.3.0" # 'notebook' version 6.4.11 is outdated (latest: 6.5.2)
Pympler = "^0.9"
types-PyYAML = "^6.0.4"
types-redis = "^4.1.16" # 'types-redis' version 4.2.6 is outdated (latest: 4.3.21.3)
types-requests = "^2.27.10" # 'types-requests' version 2.27.29 is outdated (latest: 2.28.11.2)
types-tabulate = "^0.8.5" # 'types-tabulate' version 0.8.9 is outdated (latest: 0.9.0.0)
types-Jinja2 = "^2.11.9"
pandas-stubs = "^1.2.0" # 'pandas-stubs' version 1.2.0.58 is outdated (latest: 1.5.1.221024)
types-itsdangerous = "^1.1.6"

[tool.black]
line-length = 120
target-version = ['py38']

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

